log-output/manifests/log-ping-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: log-ping-gateway
  namespace: exercises
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-route
  namespace: exercises
spec:
  parentRefs:
  - name: log-ping-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 3456
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 2345
